<resources>
    <string name="app_name">Proyect01</string>
    <string name="log_out">log_out</string>
    <string name="not_log_in">No puede iniciar sesion</string>
    <string name="revoke">sesion revocada</string>
    <string name="not_close_session">no se pudo cerrar sesion</string>
    <string name="not_revoke">no se pudo revocar</string>
    <string name="not_firebase_auth">no se pudo autentificar con firebase</string>
    <string name="title_contact">Contacts</string>
    <string name="title_text">Text</string>
    <string name="title_image">Gallery</string>
    <string name="title_video">Video</string>
    <string name="title_map">Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
